--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+      <h1>Random Numbers</h1>
+      <div id="numbers-container"></div>
+      <p id="timer-display"></p>
 <!--! -MY JS- -->
 <script src="js/script.js"></script>
 </body>
