--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 id="countdown" class="text-center"></h1>
             <h3 class="text-center">Random Numbers:</h3>
             <p id="number-list"></p>
-            <div id="input" class="text-center">
+            <div id="input" class="text-center d-none">
                   <input type="number" id="1" max="99" min="1" >
                   <input type="number" id="2" max="99" min="1" >
                   <input type="number" id="3" max="99" min="1" >
@@ -36,8 +36,8 @@
             </div>
             <p id="risultato"></p>
             <div class="justify-content-center d-flex">
-                  <button id="play-button" class="" type="button">Verifica</button>
-                  <button id="refresh-button" class="" type="button">Refresh</button>
+                  <button id="play-button" class="d-none" type="button">Verifica</button>
+                  <button id="refresh-button" class="d-none" type="button">Refresh</button>
             </div>
       </div>
       <p id="timer-display"></p>
