--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gabriele Lombardo"> 
     <meta name="keywords" content="Boolean exercise Classe 100"> 
-    <meta name="description" content="Riproduzione di un . . .">
+    <meta name="description" content="Riproduzione di un countdown">
     <!--TODO Font Awesome -->
     <link rel="stylesheet" 
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
